sportsmgmt/main/default/objects/Player__c/fields/Headshot_URL__c.field-meta.xml
<CustomField>
    <fullName>Headshot_URL__c</fullName>
    <description>URL to the player headshot image</description>
    <label>Headshot URL</label>
    <type>Url</type>
</CustomField>