sportsmgmt/main/default/objects/Player__c/fields/Jersey_Number__c.field-meta.xml
<CustomField>
    <fullName>Jersey_Number__c</fullName>
    <description>The jersey number of the player</description>
    <label>Jersey Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>