sportsmgmt/main/default/objects/Player__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <description>The playing position of the player</description>
    <label>Position</label>
    <length>100</length>
    <type>Text</type>
</CustomField>